--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -38,6 +38,20 @@
 
     <!-- Main CSS-->
     <link href="css/main1.css" rel="stylesheet" media="all">
+
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
+    <link rel="stylesheet" href="css/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.css">
+    <link rel="stylesheet" href="css/styles1.css">
+
+<!--    <link rel="stylesheet" href="css/bootstrap.min.css">-->
+<!--    <link rel="stylesheet" href="material-icons.min.css">-->
+<!--    <link rel="stylesheet" href="Profile-with-data-and-skills.css">-->
+<!--    <link rel="stylesheet" href="styles.css">-->
 </head>
 
 
@@ -67,7 +81,13 @@
 
 <!-- Main JS-->
 <script src="js/global.js"></script>
-
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/jquery.tablesorter.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-filter.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-storage.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script src="js/Ludens---1-Index-Table-with-Search--Sort-Filters-v20-1.js"></script>
+<script src="js/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.js"></script>
 
 </body>
 </html>
