--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -22,27 +22,35 @@
         </div>
     </div>
 </nav>
-<div class="limiter">
-    <div class="container-table100">
-        <div class="wrap-table100">
-            <div class="table100">
-                <table>
-                    <thead>
-                    <tr class="table100-head">
-                        <th class="column1">Avatar</th>
-                        <th class="column2">ID</th>
-                        <th class="column3">Name</th>
-                        <th class="column4">Username</th>
-                        <th class="column5">Password</th>
-                        <th class="column4">Phone</th>
-                        <th class="column6">Số phòng</th>
-<!--                        <th class="column6">Thiết bị</th>-->
-                        <th class="column6">Sự kiện</th>
-                    </tr>
-                    </thead>
-                    {{#each docs}}
-                        <tbody>
-                        <tr  >
+<div class="container-fluid">
+    <div class="card" id="TableSorterCard">
+        <div class="card-header py-3">
+            <div class="row table-topper align-items-center">
+                <div class="col-12 col-sm-5 col-md-6 text-start" style="margin: 0px;padding: 5px 15px;">
+                    <p class="text-primary m-0 fw-bold">Danh sách bệnh nhân</p>
+                </div>
+                <div class="col-12 col-sm-7 col-md-6 text-end" style="margin: 0px;padding: 5px 15px;"><button class="btn btn-primary btn-sm reset" type="button" style="margin: 2px;">Borrar Filtros</button><button class="btn btn-warning btn-sm" id="zoom_in" type="button" zoomclick="ChangeZoomLevel(-10);" style="margin: 2px;"><i class="fa fa-search-plus"></i></button><button class="btn btn-warning btn-sm" id="zoom_out" type="button" zoomclick="ChangeZoomLevel(-10);" style="margin: 2px;"><i class="fa fa-search-minus"></i></button></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="table-responsive">
+                    <table class="table table-striped table tablesorter" id="ipi-table">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th class="column1">Ảnh</th>-->
+                                                    <th class="column2">ID</th>
+                                                    <th class="column3">Họ Và Tên</th>
+                                                    <th class="column4">Tên đăng nhập</th>
+                                                    <th class="column5">Mật khẩu</th>
+                                                    <th class="column4">Số điện thoại</th>
+                                                    <th class="column6">Số phòng</th>
+                                                    <th class="column6">Sự kiện</th>
+                        </tr>
+                        </thead>
+{{#each docs}}
+                        <tbody >
+                        <tr>
                             <td class="column1"><img class="rounded-circle me-2" width="30" height="30" src="img/avatars/avatar{{this.id}}.jpeg" /></td>
                             <td class="column2">{{this.id}}</td>
                             <td class="column3">{{this.name}}</td>
@@ -50,21 +58,63 @@
                             <td class="column5">{{this.password}}</td>
                             <td class="column4">{{this.phone}}</td>
                             <td class="column6">{{this.number_room}}</td>
-<!--                            <td class="column6">{{this.key_device}}</td>-->
-                            <td>
-
-<!--                               <a href="/profile/{{this._id}}" style="width: 20px; height:20px;float: left; text-align: left; background-color: red;">sửa</a>-->
-<!--                                <a href="/delete/{{this._id}}" style="width: 10px; position: absolute;" onclick="return confirm('Bạn muốn xóa bác sĩ')" class="btn btn-danger btn-sm ">DELETE</a>-->
-                                <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="/profile/{{this._id}}" type="button" class="btn btn-primary btn-sm">Thông tin</a>
-                                    <button type="button" class="btn btn-warning">Sửa</button>
-                                </div>
-                            </td>
+                            <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
+                                <a class="btn btnMaterial btn-flat primary semicircle" role="button" href="/profile/{{this._id}}"><i class="far fa-eye"></i></a>
+                                <a class="btn btnMaterial btn-flat success semicircle" role="button" href="#"><i class="fas fa-pen"></i></a>
+                                <a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button" style="margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#delete-modal" href="#"><i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a></td>
                         </tr>
                         </tbody>
-                    {{/each}}
-                </table>
+{{/each}}
+                    </table>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+<!--<div class="limiter">-->
+<!--    <div class="container-table100">-->
+<!--        <div class="wrap-table100">-->
+<!--            <div class="table100">-->
+<!--                <table>-->
+<!--                    <thead>-->
+<!--                    <tr class="table100-head">-->
+<!--                        <th class="column1">Avatar</th>-->
+<!--                        <th class="column2">ID</th>-->
+<!--                        <th class="column3">Name</th>-->
+<!--                        <th class="column4">Username</th>-->
+<!--                        <th class="column5">Password</th>-->
+<!--                        <th class="column4">Phone</th>-->
+<!--                        <th class="column6">Số phòng</th>-->
+<!--&lt;!&ndash;                        <th class="column6">Thiết bị</th>&ndash;&gt;-->
+<!--                        <th class="column6">Sự kiện</th>-->
+<!--                    </tr>-->
+<!--                    </thead>-->
+<!--                    {{#each docs}}-->
+<!--                        <tbody>-->
+<!--                        <tr  >-->
+<!--                            <td class="column1"><img class="rounded-circle me-2" width="30" height="30" src="img/avatars/avatar{{this.id}}.jpeg" /></td>-->
+<!--                            <td class="column2">{{this.id}}</td>-->
+<!--                            <td class="column3">{{this.name}}</td>-->
+<!--                            <td class="column4">{{this.username}}</td>-->
+<!--                            <td class="column5">{{this.password}}</td>-->
+<!--                            <td class="column4">{{this.phone}}</td>-->
+<!--                            <td class="column6">{{this.number_room}}</td>-->
+<!--&lt;!&ndash;                            <td class="column6">{{this.key_device}}</td>&ndash;&gt;-->
+<!--                            <td>-->
+
+<!--&lt;!&ndash;                               <a href="/profile/{{this._id}}" style="width: 20px; height:20px;float: left; text-align: left; background-color: red;">sửa</a>&ndash;&gt;-->
+<!--&lt;!&ndash;                                <a href="/delete/{{this._id}}" style="width: 10px; position: absolute;" onclick="return confirm('Bạn muốn xóa bác sĩ')" class="btn btn-danger btn-sm ">DELETE</a>&ndash;&gt;-->
+<!--                                <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">-->
+<!--                                    <a href="/profile/{{this._id}}" type="button" class="btn btn-primary btn-sm">Thông tin</a>-->
+<!--                                    <button type="button" class="btn btn-warning">Sửa</button>-->
+<!--                                </div>-->
+<!--                            </td>-->
+<!--                        </tr>-->
+<!--                        </tbody>-->
+<!--                    {{/each}}-->
+<!--                </table>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
