--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -39,14 +39,14 @@
     <!-- Main CSS-->
     <link href="css/main1.css" rel="stylesheet" media="all">
 
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="fonts/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
     <link rel="stylesheet" href="css/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.css">
-    <link rel="stylesheet" href="css/styles1.css">
+<!--    <link rel="stylesheet" href="css/styles1.css">-->
 
 <!--    <link rel="stylesheet" href="css/bootstrap.min.css">-->
 <!--    <link rel="stylesheet" href="material-icons.min.css">-->
