--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
     <div class="container-fluid d-flex flex-column p-0"><a
             class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
