--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -66,7 +66,7 @@
 <!--                                    });-->
 <!--                                    });-->
                                     <form action="/sendToAll" method="post" id="myform">
-                                    <a  id="sumbmit" href="/sendToAll"  type="button"
+                                    <a  id="sumbmit" type="button" name="key"
                                         onclick="document.getElementById('myform').submit();"
                                        class="btn btn-danger btn-sm btn-rounded"><i
                                             class="fas fa-plane pr-2 pt-1" aria-hidden="true"> </i>Gọi hỗ trợ
