--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -49,7 +49,6 @@
                             <th>Selection</th>
                         </tr>
                         </thead>
-
                         <tbody>
                         {{#each doctors}}
                             <tr>
@@ -57,6 +56,11 @@
                                 <td id="name">{{name}}</td>
                                 <td>{{state}}</td>
                                 <td>
+                                    <a id="sumbmit" href="/updateStatus/{{this._id}}/{{../patient.key_device}}"  type="button"
+                                       onclick="document.getElementById('myform').submit();"
+                                       class="btn btn-danger btn-sm btn-rounded"><i
+                                            class="fas fa-plane pr-2 pt-1" aria-hidden="true"> </i>Gọi hỗ trợ
+                                    </a>
 <!--                                    $("#sumbmit").click(function () {-->
 <!--                                    var name = $("#name").val();-->
 <!--                                    swal({-->
@@ -65,20 +69,13 @@
 <!--                                    icon: "success",-->
 <!--                                    });-->
 <!--                                    });-->
-                                    <form action="/sendToAll" method="post" id="myform">
-                                    <a  id="sumbmit" href="/sendToAll"  type="button"
-                                        onclick="document.getElementById('myform').submit();"
-                                       class="btn btn-danger btn-sm btn-rounded"><i
-                                            class="fas fa-plane pr-2 pt-1" aria-hidden="true"> </i>Gọi hỗ trợ
-                                    </a>
-                                    </form>
+
                                 </td>
                             </tr>
                         {{/each}}
                         </tbody>
 
                     </table>
-
                 </div>
 
                 <!--Footer-->
@@ -328,17 +325,7 @@
     });
 </script>
 
-<script>
-    $('#exampleModal').on('show.bs.modal', function (event) {
-        var button = $(event.relatedTarget) // Button that triggered the modal
-        var recipient = button.data('whatever') // Extract info from data-* attributes
-        // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-        // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
-        var modal = $(this)
-        modal.find('.modal-title').text('New message to ' + recipient)
-        modal.find('.modal-body input').val(recipient)
-    })
-</script>
+
 <script src="bootstrap/js/bootstrap.min.js"></script>
 <script src="js/chart.min.js"></script>
 <script src="js/bs-init.js"></script>
