--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -59,8 +59,10 @@
                             <td class="column6">{{this.number_room}}</td>
                             <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
                                 <a class="btn btnMaterial btn-flat primary semicircle" role="button" href="/profile/{{this._id}}"><i class="far fa-eye"></i></a>
-                                <a class="btn btnMaterial btn-flat success semicircle" role="button" href="#"><i class="fas fa-pen"></i></a>
-                                <a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button" style="margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#delete-modal" href="#"><i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a></td>
+                                <a class="btn btnMaterial btn-flat success semicircle" role="button" href="/{{this._id}}"><i class="fas fa-pen"></i></a>
+                                <a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button"  href="/delete/{{this._id}}">
+                                    <i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a>
+                            </td>
                         </tr>
                         </tbody>
 {{/each}}
