--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -9,7 +9,7 @@
         <ul class="navbar-nav text-light" id="accordionSidebar">
             <li class="nav-item"><a class="nav-link active" href="/list-patients"><i
                     class="fas fa-tachometer-alt"></i><span>Danh sách bệnh nhân</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="/list-doctors"><i class="fas fa-user"></i><span>Danh sách bác sĩ</span></a>
+            <li class="nav-item"><a class="nav-link" href="/list"><i class="fas fa-user"></i><span>Danh sách bác sĩ</span></a>
             </li>
             <li class="nav-item"><a class="nav-link" href="/add-patient"><i
                     class="fas fa-table"></i><span>Add patient</span></a></li>
@@ -58,8 +58,8 @@
                             <td class="column4">{{this.phone}}</td>
                             <td class="column6">{{this.number_room}}</td>
                             <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
-                                <a class="btn btnMaterial btn-flat primary semicircle" role="button" href="/profile/{{this._id}}"><i class="far fa-eye"></i></a>
-                                <a class="btn btnMaterial btn-flat success semicircle" role="button" href="/{{this._id}}"><i class="fas fa-pen"></i></a>
+                                <a class="btn btnMaterial btn-flat primary semicircle" role="button" href="/list-patients/{{this._id}}"><i class="far fa-eye"></i></a>
+                                <a class="btn btnMaterial btn-flat success semicircle" role="button" href="/list-patients/update/{{this._id}}"><i class="fas fa-pen"></i></a>
                                 <a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button"  href="/delete/{{this._id}}">
                                     <i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a>
                             </td>
