--- a/views/infoPatient.hbs
+++ b/views/infoPatient.hbs
@@ -7,7 +7,7 @@
     <title>Untitled</title>
     <link rel="stylesheet" href="../public/bootstrap4/css/bootstrap.min.css">
     <link rel="stylesheet" href="fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../public/css/infopatien.css">
+    <link rel="stylesheet" href="../public/css1/infopatien.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
@@ -142,8 +142,8 @@
 <!--                            <div class="input-group">-->
 <!--                                <label class="label">Ngày Sinh</label>-->
 <!--                                <div class="input-group-icon">-->
-<!--                                    <input class="input--style-4 js-datepicker" type="text" name="birth_day" value="{{patient.birth_day}}">-->
-<!--                                    <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>-->
+<!--                                    <input class="input--style-4 js1-datepicker" type="text" name="birth_day" value="{{patient.birth_day}}">-->
+<!--                                    <i class="zmdi zmdi-calendar-note input-icon js1-btn-calendar"></i>-->
 <!--                                </div>-->
 <!--                            </div>-->
 <!--                        </div>-->
