--- a/views/listDoctor.hbs
+++ b/views/listDoctor.hbs
@@ -1,56 +1,155 @@
-<nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
-    <div class="container-fluid d-flex flex-column p-0"><a
-            class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
-        <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-laugh-wink"></i></div>
-        <div class="sidebar-brand-text mx-3"><span>Profile</span></div>
-    </a>
-        <hr class="sidebar-divider my-0">
-        <ul class="navbar-nav text-light" id="accordionSidebar">
-            <li class="nav-item"><a class="nav-link active" href="/list-patients"><i
-                    class="fas fa-tachometer-alt"></i><span>Danh sách bệnh nhân</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="/list-doctors"><i class="fas fa-user"></i><span>Danh sách bác sĩ</span></a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="/add-patient"><i
-                    class="fas fa-table"></i><span>Add patient</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="/login"><i class="far fa-user-circle"></i><span>Thông báo</span></a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="/login"><i class="fas fa-user-circle"></i><span>Đăng xuất</span></a>
-            </li>
-        </ul>
-        <div class="text-center d-none d-md-inline">
-            <button class=" rounded-circle border-0" id="sidebarToggle" type="button"></button>
+<!DOCTYPE html>
+<head>
+    <title>Sidebar 05</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Untitled</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+</head>
+<body>
+<div class="wrapper d-flex align-items-stretch">
+    <nav id="sidebar">
+        <div class="custom-menu">
+            <button type="button" id="sidebarCollapse" class="btn btn-primary">
+                <i class="fa fa-bars"></i>
+                <span class="sr-only">Toggle Menu</span>
+            </button>
         </div>
-    </div>
-</nav>
-<div class="limiter">
-    <div class="container-table100">
-        <div class="wrap-table100">
-            <div class="table100">
-                <table>
-                    <thead>
-                    <tr class="table100-head">
-                        <th class="column1">Avatar</th>
-                        <th class="column2">ID</th>
-                        <th class="column3">Name</th>
-                        <th class="column4">Username</th>
-                        <th class="column5">Password</th>
-                        <th class="column6">State</th>
-                    </tr>
-                    </thead>
-                    {{#each docs}}
-                    <tbody>
-                    <tr>
-                        <td class="column1"><img class="rounded-circle me-2" width="30" height="30" src="img/avatars/avatar{{this.id}}.jpeg" /></td>
-                        <td class="column2">{{this.id}}</td>
-                        <td class="column3">{{this.name}}</td>
-                        <td class="column4">{{this.username}}</td>
-                        <td class="column5">{{this.password}}</td>
-                        <td class="column6">{{this.state}}</td>
-                    </tr>
-                    </tbody>
-                    {{/each}}
-                </table>
+        <div class="p-4">
+            <h1><a href="index.html" class="logo">Xin chào <span></span></a></h1>
+            <ul class="list-unstyled components mb-5">
+                <li >
+                    <a href="/list-patients"><span class="fa fa-home mr-3"></span> Danh sách bệnh nhân</a>
+                </li>
+                <li class="active">
+                    <a href="/list"><span class="fa fa-user mr-3"></span> Danh sách bác sĩ</a>
+                </li>
+                <li>
+                    <a href="/add-patient"><span class="fa fa-briefcase mr-3"></span> Thêm bệnh nhân</a>
+                </li>
+                <li>
+                    <a href="/login"><span class="fa fa-sticky-note mr-3"></span> Đăng Xuất</a>
+                </li>
+                <li>
+                    <a href="#"><span class="fa fa-suitcase mr-3"></span> Phản hồi</a>
+                </li>
+            </ul>
+
+
+
+
+        </div>
+    </nav>
+
+    <section class="table">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6 text-center mb-5">
+                    <h2 class="heading-section">Danh sách bác sĩ</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="table-wrap">
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th>Invoce</th>
+                                <th>Customer</th>
+                                <th>Ship</th>
+                                <th>Price</th>
+                                <th>Pruchased Price</th>
+                                <th>Status</th>
+                            </tr>
+                            </thead>
+                        <tbody>
+                            {{#each docs}}
+                                <tbody>
+                                <tr>
+                                    <td class="column1"><img class="rounded-circle me-2" width="30" height="30"
+                                                             src="img/avatars/avatar{{this.id}}.jpeg"/></td>
+                                    <td class="column2">{{this.id}}</td>
+                                    <td class="column3">{{this.name}}</td>
+                                    <td class="column4">{{this.username}}</td>
+                                    <td class="column5">{{this.password}}</td>
+                                    {{#if this.state}}
+                                        <td><a href="#" class="btn btn-success">{{this.state}}</a></td>
+                                    {{else}}
+                                        <td><a href="#" class="btn btn-danger">{{this.state}}</a></td>{{/if}}
+
+
+                                </tr>
+                                </tbody>
+                            {{/each}}
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 </div>
+</body>
+</html>
+
+<!--<nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">-->
+<!--    <div class="container-fluid d-flex flex-column p-0"><a-->
+<!--            class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">-->
+<!--        <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-laugh-wink"></i></div>-->
+<!--        <div class="sidebar-brand-text mx-3"><span>Profile</span></div>-->
+<!--    </a>-->
+<!--        <hr class="sidebar-divider my-0">-->
+<!--        <ul class="navbar-nav text-light" id="accordionSidebar">-->
+<!--            <li class="nav-item"><a class="nav-link active" href="/list-patients"><i-->
+<!--                    class="fas fa-tachometer-alt"></i><span>Danh sách bệnh nhân</span></a></li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="/list-doctors"><i class="fas fa-user"></i><span>Danh sách bác sĩ</span></a>-->
+<!--            </li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="/add-patient"><i-->
+<!--                    class="fas fa-table"></i><span>Add patient</span></a></li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="/login"><i class="far fa-user-circle"></i><span>Thông báo</span></a>-->
+<!--            </li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="/login"><i class="fas fa-user-circle"></i><span>Đăng xuất</span></a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--        <div class="text-center d-none d-md-inline">-->
+<!--            <button class=" rounded-circle border-0" id="sidebarToggle" type="button"></button>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</nav>-->
+<!--<div class="limiter">-->
+<!--    <div class="container-table100">-->
+<!--        <div class="wrap-table100">-->
+<!--            <div class="table100">-->
+<!--                <table>-->
+<!--                    <thead>-->
+<!--                    <tr class="table100-head">-->
+<!--                        <th class="column1">Avatar</th>-->
+<!--                        <th class="column2">ID</th>-->
+<!--                        <th class="column3">Name</th>-->
+<!--                        <th class="column4">Username</th>-->
+<!--                        <th class="column5">Password</th>-->
+<!--                        <th class="column6">State</th>-->
+<!--                    </tr>-->
+<!--                    </thead>-->
+        <!--                    {{#each docs}}-->
+<!--                    <tbody>-->
+<!--                    <tr>-->
+<!--                        <td class="column1"><img class="rounded-circle me-2" width="30" height="30" src="img/avatars/avatar{{this.id}}.jpeg" /></td>-->
+<!--                        <td class="column2">{{this.id}}</td>-->
+<!--                        <td class="column3">{{this.name}}</td>-->
+<!--                        <td class="column4">{{this.username}}</td>-->
+<!--                        <td class="column5">{{this.password}}</td>-->
+<!--                        <td class="column6">{{this.state}}</td>-->
+<!--                    </tr>-->
+<!--                    </tbody>-->
+        <!--                    {{/each}}-->
+<!--                </table>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
