--- a/views/listDoctor.hbs
+++ b/views/listDoctor.hbs
@@ -132,7 +132,7 @@
             </ol>
         </nav>
     </div><!-- End Page Title -->
-    <div id="content" class="p-4 p-md-5 pt-5">
+    <div id="content" class="p-4  pt-5">
         <div class="container-fluid">
             <div class="card" id="TableSorterCard">
                 <div class="card-header py-2">
