--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -105,17 +105,17 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-        <h1>Danh sách bệnh nhân</h1>
+        <h1>Thêm bệnh nhân</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="/dashboard">Home</a></li>
                 <li class="breadcrumb-item">Bệnh nhân</li>
-                <li class="breadcrumb-item active">Danh sách bệnh nhân</li>
+                <li class="breadcrumb-item active">Thêm bệnh nhân</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
     <section class="section">
-        <div id="content" class="p-4 p-md-5 pt-5">
+        <div id="content" class="p-4 pt-5">
             <div class="container-fluid"  >
                 <div class="card" id="TableSorterCard">
                     <div class="card-header py-2">
