--- a/views/notification.hbs
+++ b/views/notification.hbs
@@ -1,45 +1,188 @@
+<!-- End #main -->
+<!--<div class="container">-->
+<!--    <div class="row">-->
+<!--        <div class="col-md-12">-->
+<!--            <h1 class="text-center">Gửi thông báo</h1>-->
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1 class="text-center">Gửi thông báo</h1>
+<!--    {{#each data1}}-->
+<!--            <form method="post" action="/sendToAll">-->
+<!--                <div class="form-group mb-3"><label class="form-label">ID </label>-->
+<!--                    <input class="form-control" type="text" placeholder="ID" name="id" value="{{this.id}}" readonly></div>-->
+<!--            {{#each ../data2}}-->
+<!--                <div class="form-group mb-3"><label class="form-label">Token </label>-->
+<!--                    <input class="form-control" type="text"  name="token" placeholder="ID" value="{{this.tokenn}}" readonly></div>-->
+<!--            {{/each}}-->
+<!--                <div class="form-group mb-3"><label class="form-label">Title </label>-->
+<!--                    <input class="form-control" type="text" name="title" placeholder="Your email address" ></div>-->
 
-    {{#each data1}}
-            <form method="post" action="/sendToAll">
-                <div class="form-group mb-3"><label class="form-label">ID </label>
-                    <input class="form-control" type="text" placeholder="ID" name="id" value="{{this.id}}" readonly></div>
-            {{#each ../data2}}
-                <div class="form-group mb-3"><label class="form-label">Token </label>
-                    <input class="form-control" type="text"  name="token" placeholder="ID" value="{{this.tokenn}}" readonly></div>
-            {{/each}}
-                <div class="form-group mb-3"><label class="form-label">Title </label>
-                    <input class="form-control" type="text" name="title" placeholder="Your email address" ></div>
+<!--                <div class="form-group mb-3">-->
+<!--                    <label class="form-label">Name</label>-->
+<!--                    <input class="form-control" type="text" placeholder="Your name" name="name" value="{{this.name}}" readonly>-->
+<!--                </div>-->
 
-                <div class="form-group mb-3">
-                    <label class="form-label">Name</label>
-                    <input class="form-control" type="text" placeholder="Your name" name="name" value="{{this.name}}" readonly>
+<!--                <div class="form-group mb-3"><label class="form-label">Room</label>-->
+<!--                    <input class="form-control" type="text" name="room" value="{{this.number_room}}" readonly></div>-->
+
+<!--                <div class="form-group mb-3"><label class="form-label">Age</label>-->
+<!--                    <input class="form-control" type="text" name="age" value="{{this.age}}" readonly></div>-->
+
+<!--                <div class="form-group mb-3"><label class="form-label">Status</label>-->
+<!--                    <input class="form-control" type="text" name="status" placeholder="" ></div>-->
+
+<!--                <div class="form-group mb-3"><label class="form-label">Medicine</label>-->
+<!--                    <textarea class="form-control" placeholder="Type your message here" name="medicine" rows="5"></textarea></div>-->
+
+<!--                <div class="form-group mb-3"><label class="form-label">AmountAndUse </label>-->
+<!--                    <textarea class="form-control" placeholder="Type your message here" name="amountAndUse" rows="5"></textarea></div>-->
+
+<!--                <button class="btn btn-light" type="submit" >Send </button>-->
+<!--            </form>-->
+<!--    {{/each}}-->
+
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>Gửi thông báo</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="assets/vendor/quill/quill.snow.css" rel="stylesheet">
+    <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet">
+    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+    <link href="assets/css/style.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+<!-- ======= Header ======= -->
+<header id="header" class="header fixed-top d-flex align-items-center">
+
+    <div class="d-flex align-items-center justify-content-between">
+        <a href="/dashboard" class="logo d-flex align-items-center">
+            <img src="assets/img/logo.png" alt="">
+            <span class="d-none d-lg-block">NiceAdmin</span>
+        </a>
+        <i class="bi bi-list toggle-sidebar-btn"></i>
+    </div><!-- End Logo -->
+
+</header><!-- End Header -->
+
+<!-- ======= Sidebar ======= -->
+<main id="main" class="main">
+
+    <div class="pagetitle">
+        <h1>Form Layouts</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/list-patients">Bệnh nhân</a></li>
+                <li class="breadcrumb-item">Danh sách bệnh nhân</li>
+                <li class="breadcrumb-item active">Gửi thông báo</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
+    <section class="section">
+
+        <div class="col-lg-12">
+
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Gửi Thông báo</h5>
+                    {{#each data1}}
+                        <!-- Multi Columns Form -->
+                        <form class="row g-3">
+                            <div class="col-md-12">
+                                <label for="inputName5" class="form-label">ID</label>
+                                <input type="text" class="form-control" name="id" value="{{this.id}}" readonly>
+                            </div>
+                            {{#each ../data2}}
+                                <div class="col-md-12">
+                                    <label for="inputName5" class="form-label">Token </label>
+                                    <input type="text" class="form-control" name="token" value="{{this.tokenn}}" readonly>
+                                </div>
+                            {{/each}}
+                            <div class="col-md-12">
+                                <label for="inputName5" class="form-label">Title </label>
+                                <input type="text" class="form-control" name="title" placeholder="Your email address">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="inputEmail5" class="form-label">Name </label>
+                                <input type="email" class="form-control" name="name" value="{{this.name}}" readonly>
+                            </div>
+                            <div class="col-md-3">
+                                <label for="inputPassword5" class="form-label">Room </label>
+                                <input type="number" class="form-control" name="room" value="{{this.number_room}}" readonly>
+                            </div>
+                            <div class="col-md-3">
+                                <label for="inputPassword5" class="form-label">Age </label>
+                                <input type="number" class="form-control" name="age" value="{{this.age}}" readonly>
+                            </div>
+                            <div class="col-md-12">
+                                <label for="inputName5" class="form-label">Status </label>
+                                <input type="text" class="form-control" name="status" placeholder="" >
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    <textarea class="form-control" placeholder="Address" name="medicine" rows="5" style="height: 120px;" ></textarea>
+                                    <label for="floatingTextarea">Medicine </label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    <textarea class="form-control" placeholder="Address"  name="amountAndUse" rows="5" style="height: 120px;"></textarea>
+                                    <label for="floatingTextarea">Amoun And Use</label>
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary" style="width: 120px">Send</button>
+                            </div>
+                        </form><!-- End Multi Columns Form -->
+                    {{/each}}
                 </div>
-
-                <div class="form-group mb-3"><label class="form-label">Room</label>
-                    <input class="form-control" type="text" name="room" value="{{this.number_room}}" readonly></div>
-
-                <div class="form-group mb-3"><label class="form-label">Age</label>
-                    <input class="form-control" type="text" name="age" value="{{this.age}}" readonly></div>
-
-                <div class="form-group mb-3"><label class="form-label">Status</label>
-                    <input class="form-control" type="text" name="status" placeholder="" ></div>
-
-                <div class="form-group mb-3"><label class="form-label">Medicine</label>
-                    <textarea class="form-control" placeholder="Type your message here" name="medicine" rows="5"></textarea></div>
-
-                <div class="form-group mb-3"><label class="form-label">AmountAndUse </label>
-                    <textarea class="form-control" placeholder="Type your message here" name="amountAndUse" rows="5"></textarea></div>
-
-                <button class="btn btn-light" type="submit" >Send </button>
-            </form>
-    {{/each}}
+            </div>
 
         </div>
-    </div>
-</div>
+    </section>
+</main>
 
+
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+<!-- Vendor JS Files -->
+<script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/chart.js/chart.min.js"></script>
+<script src="assets/vendor/echarts/echarts.min.js"></script>
+<script src="assets/vendor/quill/quill.min.js"></script>
+<script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
+<script src="assets/vendor/tinymce/tinymce.min.js"></script>
+<script src="assets/vendor/php-email-form/validate.js"></script>
+
+<!-- Template Main JS File -->
+<script src="assets/js/main.js"></script>
+
+</body>
+
+</html>
