--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -271,11 +271,11 @@
 
                                 <div class="d-flex align-items-center">
                                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                                        <i class="bi bi-cart"></i>
+                                        <i class="bi bi-people"></i>
                                     </div>
                                     <div class="ps-3">
-                                        <h6>145</h6>
-                                        <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
+                                        <h6>{{total}}</h6>
+
 
                                     </div>
                                 </div>
@@ -302,15 +302,15 @@
                             </div>
 
                             <div class="card-body">
-                                <h5 class="card-title">Tổng Số Bác Sĩ <span>| This Month</span></h5>
+                                <h5 class="card-title">Số bệnh nhân đã khỏi <span>| This Month</span></h5>
 
                                 <div class="d-flex align-items-center">
                                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                                        <i class="bi bi-currency-dollar"></i>
+                                        <i class="bi bi-people"></i>
                                     </div>
                                     <div class="ps-3">
-                                        <h6>$3,264</h6>
-                                        <span class="text-success small pt-1 fw-bold">8%</span> <span class="text-muted small pt-2 ps-1">increase</span>
+                                        <h6>{{totaldn}}</h6>
+
 
                                     </div>
                                 </div>
@@ -338,15 +338,15 @@
                             </div>
 
                             <div class="card-body">
-                                <h5 class="card-title">Số bệnh nhân đã khỏi bệnh <span>| This Year</span></h5>
+                                <h5 class="card-title">Số bệnh nhân tử vong<span>| This Year</span></h5>
 
                                 <div class="d-flex align-items-center">
                                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                                         <i class="bi bi-people"></i>
                                     </div>
                                     <div class="ps-3">
-                                        <h6>1244</h6>
-                                        <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
+                                        <h6>{{totaldi}}</h6>
+
 
                                     </div>
                                 </div>
@@ -374,6 +374,61 @@
                                 </ul>
                             </div>
 
+
+                            <div class="card-body pb-0">
+                                <h5 class="card-title">Thống kê bệnh nhân </h5>
+
+                                <div id="trafficChart" style="min-height: 400px;" class="echart"></div>
+
+                                <script>
+                                    document.addEventListener("DOMContentLoaded", () => {
+                                        echarts.init(document.querySelector("#trafficChart")).setOption({
+                                            tooltip: {
+                                                trigger: 'item'
+                                            },
+                                            legend: {
+                                                top: '5%',
+                                                left: 'center'
+                                            },
+                                            series: [{
+                                                name: 'Access From',
+                                                type: 'pie',
+                                                radius: ['40%', '70%'],
+                                                avoidLabelOverlap: false,
+                                                label: {
+                                                    show: false,
+                                                    position: 'center'
+                                                },
+                                                emphasis: {
+                                                    label: {
+                                                        show: true,
+                                                        fontSize: '18',
+                                                        fontWeight: 'bold'
+                                                    }
+                                                },
+                                                labelLine: {
+                                                    show: false
+                                                },
+                                                data: [{
+                                                    value: {{total}},
+                                                    name: 'Tổng số bệnh nhân'
+                                                },
+                                                    {
+                                                        value: {{totaldn}},
+                                                        name: 'Số bệnh nhân đã khỏi'
+                                                    },
+                                                    {
+                                                        value: {{totaldi}},
+                                                        name: 'Số bệnh nhân tử vong'
+                                                    },
+
+                                                ]
+                                            }]
+                                        });
+                                    });
+                                </script>
+
+                            </div>
 
                             <div class="card-body">
                                 <h5 class="card-title">Danh sách bác sĩ <span>| Today</span></h5>
@@ -645,67 +700,7 @@
                         </ul>
                     </div>
 
-                    <div class="card-body pb-0">
-                        <h5 class="card-title">Thống kê bệnh nhân <span>| Today</span></h5>
 
-                        <div id="trafficChart" style="min-height: 400px;" class="echart"></div>
-
-                        <script>
-                            document.addEventListener("DOMContentLoaded", () => {
-                                echarts.init(document.querySelector("#trafficChart")).setOption({
-                                    tooltip: {
-                                        trigger: 'item'
-                                    },
-                                    legend: {
-                                        top: '5%',
-                                        left: 'center'
-                                    },
-                                    series: [{
-                                        name: 'Access From',
-                                        type: 'pie',
-                                        radius: ['40%', '70%'],
-                                        avoidLabelOverlap: false,
-                                        label: {
-                                            show: false,
-                                            position: 'center'
-                                        },
-                                        emphasis: {
-                                            label: {
-                                                show: true,
-                                                fontSize: '18',
-                                                fontWeight: 'bold'
-                                            }
-                                        },
-                                        labelLine: {
-                                            show: false
-                                        },
-                                        data: [{
-                                            value: 1048,
-                                            name: 'Search Engine'
-                                        },
-                                            {
-                                                value: 735,
-                                                name: 'Direct'
-                                            },
-                                            {
-                                                value: 580,
-                                                name: 'Email'
-                                            },
-                                            {
-                                                value: 484,
-                                                name: 'Union Ads'
-                                            },
-                                            {
-                                                value: 300,
-                                                name: 'Video Ads'
-                                            }
-                                        ]
-                                    }]
-                                });
-                            });
-                        </script>
-
-                    </div>
                 </div><!-- End Website Traffic -->
 
                 <!-- News & Updates Traffic -->
